@@ -1,6 +1,7 @@
 47
 ================
 
+03/04/23 URI encode links properly for QRLink/QRShare in document templates
 30/03/23 Truncate online form fields headed to short text columns
 29/03/23 Fix formatting bug where Move->Reclaim an animal would not create costs
 23/03/23 csv_import service method #1230
